--- a/merger_tools/templates/merger_tools/index.html
+++ b/merger_tools/templates/merger_tools/index.html
@@ -1,93 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
-<body>
-    <!-- Image and text -->
-<nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img
-          src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
-          class="me-2"
-          height="20"
-          alt="MDB Logo"
-          loading="lazy"
-        />
-        <small>Video Merger Tools</small>
-      </a>
-    </div>
-  </nav>
+{% include 'merger_tools/bar.html' %}
+{% load static %}
   
-<style>
-    section h3{
-        text-align: center;
-        padding: 10px;
-    }
-    .video{
-        text-align: center;
-    }
-    .video .original{
-        margin: 20px;
-    }
-    .video label{
-        color: black;
-        font-size: 23px;
-    }
-    .video video{
-       margin-left: 25%;
-    }
 
-</style>
     <section>
         <h3>Welcome to Video mergin Tools</h3>
         
         <div class="video">
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
-                <div class="original" id="">
-                    <label for="">Choose Original Video:</label>
-                    <input required type="file" multiple name="original_video" id="original">
-                    <video width="320" height="240" style="display:none" controls autoplay>
-                        Your browser does not support the video tag.
-                    </video>
+                <div class="original" id='original'>
+                    <label for="inputState">Choose Original Video:</label>
+                    <input required type="file" onclick="select()" multiple name="original_video" id="original_v">
+
                 </div>
-                <div class="merged" id="">
-                    <label for="">Choose merged Video:</label>
-                    <input type="file" required multiple name="merged_video" id="merged">
-                    <video width="320" height="240" style="display:none" controls autoplay>
-                        Your browser does not support the video tag.
-                    </video>
-                    <select name="scale" id="">
-                        <option value="one_with_one">One with one</option>
-                        <option value="one_with_many">One wiht money</option>
-                    </select>
+                <div class="merged" id="merged">
+                    <label for="inputState">Choose Merged Video:</label>
+                    <input type="file" required multiple name="merged_video" id="merged_v">
+
                 </div>
-                <button type="submit" class="btn btn-success">Upload</button>
+                <br>
+                <button type="submit" id="step" class="btn btn-success">Upload</button>
             </form>
         </div>
 
     </section>
  
     
-<script>
-    document.getElementById("original").onchange = function(event) {
-    let file = event.target.files[0];
-    let blobURL = URL.createObjectURL(file);
-    document.querySelector("video").style.display = 'block';
-    document.querySelector("video").src = blobURL;    
-}
-</script>
-
     
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+    <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
