--- a/merger_tools/templates/merger_tools/output.html
+++ b/merger_tools/templates/merger_tools/output.html
@@ -1,38 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Settings</title>
-</head>
-<body>
-    <style>
-        section{
-            text-align: center;
-            margin: 5%;
-        }
-        .card {
-            margin: 1em auto;
-        }
+{% include 'merger_tools/bar.html' %}
+{% load static %}
+    
 
 
-    </style>
-    
-<section>
-    
+<div class="output">
+  <button type="submit" class="btn btn-primary"></button>
     <div class="container ">
-        <h4>Here is your output. please downlaod your video. it will get deleted after the page is refreshed.</h4>
+        <h4>Here is your output. please downlaod your video. it will get deleted after some times.</h4>
         <div class="row align-items-center">
             {% for out in outputs %}
           <div class="col-4">
-            
             <div class="card" style="max-width: 18rem;">
               <video src="{{out.output.url}}" style="display: block; width: 100%;"  class="card-img-top" autoplay controls></video>
               <div class="card-body">
                 <h5 class="card-title">Your Output Video</h5>
-                <a href="{{out.output.url}}" class="btn btn-primary">Downlaod</a>
+                <a href="{{out.output.url}}" download class="btn btn-primary" >Downlaod</a>
               </div>
             </div>
           </div>
@@ -40,39 +22,18 @@
         </div>
     </div>
      
-</section>
-
-<script>
-var form = document.getElementById("btn");
-function handleForm(event) { event.preventDefault(); } 
-form.addEventListener('submit', handleForm);
+  </div>
+<div class="btn">
+  <button class="btn btn-success"><a href="{% url 'templates' %}"> < Back</a></button>
+</div>
 
 
-function cut_o() {
-  var x = document.getElementById('cut_o');
-  if (x.style.display === 'none') {
-    x.style.display = 'block';
-  } 
-  else {
-    x.style.display = 'none';
-  }
-}
 
-function cut_m() {
-  var x = document.getElementById('cut_m');
-  if (x.style.display === 'none') {
-    x.style.display = 'block';
-  } 
-  else {
-    x.style.display = 'none';
-  }
-}
 
-</script>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+<script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
