--- a/merger_tools/templates/merger_tools/preview.html
+++ b/merger_tools/templates/merger_tools/preview.html
@@ -1,58 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Settings</title>
-</head>
-<body>
-    <style>
-        section{
-            text-align: center;
-            margin: 5%;
-        }
-        form span{
-            padding: 3px;
-            background-color: gray;
-            margin: 10px; 
-            cursor: pointer;
-        }
-        form span:hover{
-          background-color: chartreuse;
-        }
-        .btn{
-          margin: 20px;
-          text-align: left;
-        }
-        .btn a{
-          color: black;
-        }
-        .card{
-          width: 20rem;
-        }
-        .card video{
-          max-height: 20rem;
-          width: 100%;
-        }
-        button:hover{
-          background-color: chartreuse;
-        }
-        button{
-          cursor: pointer;
-        }
-        #ipt{
-          color: white;
-          border: white;
-          width: 1px;
-        }
-        h4{
-          padding: 20px;
-          color: deepskyblue;
-        }
-
-    </style>
+{% include 'merger_tools/bar.html' %}
+{% load static %}
     
     <section>
       <div class="btn">
@@ -61,6 +8,7 @@
       <div class="btn">
         <button class="btn btn-success"><a href="{% url 'templates' %}">Next ></a></button>
       </div>
+      <button type="" class="btn btn-primary"><a href="{% url 'doncut' firsto lasto firstm lastm %}"> Dont cut</a></button>
 
         <div class="container ">
           <h4>Original Video</h4>
@@ -74,8 +22,9 @@
                     <div class="card-body">
                       <h5 class="card-title">Original Video</h5>
                       <input type="text" name="video" id="ipt" value="{{v.original_video.path}}"><br>
-                      <span onclick="cut_o()">Cut</span><button type="submit">Don't Cut</button>
-                      <div class="cut" id="cut_o" style="display: none;">
+                      <span onclick="cut_o()" value="v.original_video.id">Cut</span><button type="submit">Don't Cut</button>
+                      <!-- <input type="checkbox" name="dont_cut" value="{{v.id}}"> -->
+                      <div class="cut" value="{{v.original_video.id}}" id="cut_o" style="display: none;">
                             <div class="cutting">
                                 <label for="">Enter start and end in second to cut:</label><br>
                                 <input type="number" name="start" placeholder="Enter start"><br>
@@ -83,7 +32,6 @@
                             </div>
                             <button type="submit" class="btn btn-success">Cut</button>
                       </div>
-                      
                     </div>
                   </div>
                 </div>
@@ -103,61 +51,42 @@
                   <div class="card">
                     <video src="{{v.merged_video.url}}" style="display: block;" class="card-img-top" autoplay controls></video>
                     <div class="card-body">
-                      <h5 class="card-title">Original Video</h5>
+                      <h5 class="card-title">Merged Video</h5>
                       <input type="text" name="video" id="ipt" value="{{v.merged_video.path}}"><br>
-                      <span onclick="cut_m()">Cut</span><button type="submit">Don't Cut</button>
-                      <div class="cut" id="cut_o" style="display: none;">
+                      <span onclick="cut_m()" value ='{{v.merged_video.id}}'>Cut</span><button type="submit">Don't Cut</button>
+                      
+                      <div class="cut" id="cut_m" value ='{{v.merged_video.id}}' style="display: none;">
                             <div class="cutting">
                                 <label for="">Enter start and end in second to cut:</label><br>
                                 <input type="number" name="start" placeholder="Enter start"><br>
                                 <input type="number" name="end" placeholder="Enter ends">
                             </div>
                             <button type="submit" class="btn btn-success">Cut</button>
-                      </div>
-                      
+                      </div>            
                     </div>
                   </div>
                 </div>
               </form>
             {% endfor %}
           </div>
+        
         </div>
-
+<!-- <a href="abbe/{{first}}/{{last}}">don cut all </a> -->
     </section>
     <div class="btn">
-      <button class="btn btn-success"><a href="{% url 'templates' %}">Back</a></button>
+      <button class="btn btn-success"><a href="{% url 'preview' %}">Back</a></button>
     </div>
     <div class="btn">
       <button class="btn btn-success"><a href="{% url 'templates' %}">Next</a></button>
     </div>
 
-<script>
 
-function cut_o() {
-  var x = document.getElementById('cut_o');
-  if (x.style.display === 'none') {
-    x.style.display = 'block';
-  } 
-  else {
-    x.style.display = 'none';
-  }
-}
 
-function cut_m() {
-  var x = document.getElementById('cut_m');
-  if (x.style.display === 'none') {
-    x.style.display = 'block';
-  } 
-  else {
-    x.style.display = 'none';
-  }
-}
-
-</script>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="{% static 'js/main.js' %}"></script>
 
 </body>
 </html>
